tests/snapshots/examples__hello-kotlin_jni_kotlin_src_android_HelloKotlin_kt.snap
---
source: tests/examples.rs
expression: "fs::read_to_string(&file)?"
---
// @generated by koffi

package hello_kotlin

import java.nio.ByteBuffer
import java.nio.ByteOrder

private fun allocateWire(size: Int): ByteBuffer =
    ByteBuffer.allocateDirect(size).order(ByteOrder.LITTLE_ENDIAN)
private fun ByteBuffer.section(offset: Int): ByteBuffer =
    duplicate().position(offset).slice().order(ByteOrder.LITTLE_ENDIAN)

private fun moodToWire(v: Mood, buf: ByteBuffer) {
    buf.putInt(0, v.discriminant)
    when (v) {
        is Mood.Flying -> {
            __koffi_option_boolToWire(v.field0, buf.section(4))
        }
        else -> {}
    }
}

private fun moodFromWire(buf: ByteBuffer): Mood {
    val d = buf.getInt(0)
    return when (d) {
        0 -> Mood.Fine
        1 -> Mood.Flying(field0 = __koffi_option_boolFromWire(buf.section(4)))
        else -> error("koffi: invalid Mood discriminant $d")
    }
}

private fun moodToBuf(v: Mood): ByteBuffer {
    val buf = allocateWire(8)
    moodToWire(v, buf)
    return buf
}
private fun statusToWire(v: Status, buf: ByteBuffer) {
    buf.putInt(0, v.discriminant)
    when (v) {
        is Status.Busy -> {
            buf.putInt(4, v.field0.toInt())
        }
        is Status.Error -> {
            buf.putInt(4, v.code.toInt())
        }
        else -> {}
    }
}

private fun statusFromWire(buf: ByteBuffer): Status {
    val d = buf.getInt(0)
    return when (d) {
        0 -> Status.Idle
        1 -> Status.Busy(field0 = buf.getInt(4).toUInt())
        2 -> Status.Error(code = buf.getInt(4).toUInt())
        -1 -> Status.Failed
        else -> error("koffi: invalid Status discriminant $d")
    }
}

private fun statusToBuf(v: Status): ByteBuffer {
    val buf = allocateWire(8)
    statusToWire(v, buf)
    return buf
}

private fun dancerToWire(v: Dancer, buf: ByteBuffer) {
    buf.putInt(0, v.id.toInt())
    __koffi_option_boolToWire(v.active, buf.section(4))
}

private fun dancerFromWire(buf: ByteBuffer): Dancer =
    Dancer(
        id = buf.getInt(0).toUInt(),
        active = __koffi_option_boolFromWire(buf.section(4)))

private fun dancerToBuf(v: Dancer): ByteBuffer {
    val buf = allocateWire(8)
    dancerToWire(v, buf)
    return buf
}
private fun payloadToWire(v: Payload, buf: ByteBuffer) {
    buf.putShort(0, v.data.toShort())
}

private fun payloadFromWire(buf: ByteBuffer): Payload =
    Payload(
        data = buf.getShort(0).toUShort())

private fun payloadToBuf(v: Payload): ByteBuffer {
    val buf = allocateWire(2)
    payloadToWire(v, buf)
    return buf
}
private fun pointToWire(v: Point, buf: ByteBuffer) {
    buf.putInt(0, v.x)
    buf.putInt(4, v.y)
}

private fun pointFromWire(buf: ByteBuffer): Point =
    Point(
        x = buf.getInt(0),
        y = buf.getInt(4))

private fun pointToBuf(v: Point): ByteBuffer {
    val buf = allocateWire(8)
    pointToWire(v, buf)
    return buf
}
private fun rectToWire(v: Rect, buf: ByteBuffer) {
    pointToWire(v.topLeft, buf.section(0))
    pointToWire(v.bottomRight, buf.section(8))
}

private fun rectFromWire(buf: ByteBuffer): Rect =
    Rect(
        topLeft = pointFromWire(buf.section(0)),
        bottomRight = pointFromWire(buf.section(8)))

private fun rectToBuf(v: Rect): ByteBuffer {
    val buf = allocateWire(16)
    rectToWire(v, buf)
    return buf
}
private fun status_holderToWire(v: StatusHolder, buf: ByteBuffer) {
    statusToWire(v.status, buf.section(0))
    buf.put(8, v.tag.toByte())
}

private fun status_holderFromWire(buf: ByteBuffer): StatusHolder =
    StatusHolder(
        status = statusFromWire(buf.section(0)),
        tag = buf.get(8).toUByte())

private fun status_holderToBuf(v: StatusHolder): ByteBuffer {
    val buf = allocateWire(12)
    status_holderToWire(v, buf)
    return buf
}

private fun __koffi_option___koffi_struct_hello_kotlin_DancerToWire(v: Dancer?, buf: ByteBuffer) {
    if (v != null) {
        buf.put(0, 1.toByte())
        val inner = v
        
dancerToWire(inner, buf.section(4))
    } else {
        buf.put(0, 0.toByte())
    }
}

private fun __koffi_option___koffi_struct_hello_kotlin_DancerFromWire(buf: ByteBuffer): Dancer? {
    return if (buf.get(0) == 1.toByte()) {
        
dancerFromWire(buf.section(4))
    } else {
        null
    }
}

private fun __koffi_option___koffi_struct_hello_kotlin_DancerToBuf(v: Dancer?): ByteBuffer {
    val buf = allocateWire(12)
    __koffi_option___koffi_struct_hello_kotlin_DancerToWire(v, buf)
    return buf
}
private fun __koffi_option___koffi_struct_hello_kotlin_PayloadToWire(v: Payload?, buf: ByteBuffer) {
    if (v != null) {
        buf.put(0, 1.toByte())
        val inner = v
        
payloadToWire(inner, buf.section(2))
    } else {
        buf.put(0, 0.toByte())
    }
}

private fun __koffi_option___koffi_struct_hello_kotlin_PayloadFromWire(buf: ByteBuffer): Payload? {
    return if (buf.get(0) == 1.toByte()) {
        
payloadFromWire(buf.section(2))
    } else {
        null
    }
}

private fun __koffi_option___koffi_struct_hello_kotlin_PayloadToBuf(v: Payload?): ByteBuffer {
    val buf = allocateWire(4)
    __koffi_option___koffi_struct_hello_kotlin_PayloadToWire(v, buf)
    return buf
}
private fun __koffi_option_boolToWire(v: Boolean?, buf: ByteBuffer) {
    if (v != null) {
        buf.put(0, 1.toByte())
        val inner = v
        
buf.put(1, if (inner) 1.toByte() else 0.toByte())
    } else {
        buf.put(0, 0.toByte())
    }
}

private fun __koffi_option_boolFromWire(buf: ByteBuffer): Boolean? {
    return if (buf.get(0) == 1.toByte()) {
        
buf.get(1) != 0.toByte()
    } else {
        null
    }
}

private fun __koffi_option_boolToBuf(v: Boolean?): ByteBuffer {
    val buf = allocateWire(2)
    __koffi_option_boolToWire(v, buf)
    return buf
}
private fun __koffi_option_f64ToWire(v: Double?, buf: ByteBuffer) {
    if (v != null) {
        buf.put(0, 1.toByte())
        val inner = v
        
buf.putDouble(8, inner)
    } else {
        buf.put(0, 0.toByte())
    }
}

private fun __koffi_option_f64FromWire(buf: ByteBuffer): Double? {
    return if (buf.get(0) == 1.toByte()) {
        
buf.getDouble(8)
    } else {
        null
    }
}

private fun __koffi_option_f64ToBuf(v: Double?): ByteBuffer {
    val buf = allocateWire(16)
    __koffi_option_f64ToWire(v, buf)
    return buf
}
private fun __koffi_option_u32ToWire(v: UInt?, buf: ByteBuffer) {
    if (v != null) {
        buf.put(0, 1.toByte())
        val inner = v
        
buf.putInt(4, inner.toInt())
    } else {
        buf.put(0, 0.toByte())
    }
}

private fun __koffi_option_u32FromWire(buf: ByteBuffer): UInt? {
    return if (buf.get(0) == 1.toByte()) {
        
buf.getInt(4).toUInt()
    } else {
        null
    }
}

private fun __koffi_option_u32ToBuf(v: UInt?): ByteBuffer {
    val buf = allocateWire(8)
    __koffi_option_u32ToWire(v, buf)
    return buf
}
private fun __koffi_result___koffi_option_u32_u8ToWire(v: KoffiResult<UInt?, UByte>, buf: ByteBuffer) {
    when (v) {
        is KoffiResult.Ok<*> -> {
            buf.put(0, 1.toByte())
            val inner = (v as KoffiResult.Ok<UInt?>).value
            
__koffi_option_u32ToWire(inner, buf.section(4))
        }
        is KoffiResult.Err<*> -> {
            buf.put(0, 0.toByte())
            val inner = (v as KoffiResult.Err<UByte>).error
            
buf.put(4, inner.toByte())
        }
    }
}

private fun __koffi_result___koffi_option_u32_u8FromWire(buf: ByteBuffer): KoffiResult<UInt?, UByte> {
    return if (buf.get(0) == 1.toByte()) {
        KoffiResult.Ok(
__koffi_option_u32FromWire(buf.section(4)))
    } else {
        KoffiResult.Err(
buf.get(4).toUByte())
    }
}

private fun __koffi_result___koffi_option_u32_u8ToBuf(v: KoffiResult<UInt?, UByte>): ByteBuffer {
    val buf = allocateWire(12)
    __koffi_result___koffi_option_u32_u8ToWire(v, buf)
    return buf
}
private fun __koffi_result___koffi_struct_hello_kotlin_Payload___koffi_enum_hello_kotlin_StatusToWire(v: KoffiResult<Payload, Status>, buf: ByteBuffer) {
    when (v) {
        is KoffiResult.Ok<*> -> {
            buf.put(0, 1.toByte())
            val inner = (v as KoffiResult.Ok<Payload>).value
            
payloadToWire(inner, buf.section(4))
        }
        is KoffiResult.Err<*> -> {
            buf.put(0, 0.toByte())
            val inner = (v as KoffiResult.Err<Status>).error
            
statusToWire(inner, buf.section(4))
        }
    }
}

private fun __koffi_result___koffi_struct_hello_kotlin_Payload___koffi_enum_hello_kotlin_StatusFromWire(buf: ByteBuffer): KoffiResult<Payload, Status> {
    return if (buf.get(0) == 1.toByte()) {
        KoffiResult.Ok(
payloadFromWire(buf.section(4)))
    } else {
        KoffiResult.Err(
statusFromWire(buf.section(4)))
    }
}

private fun __koffi_result___koffi_struct_hello_kotlin_Payload___koffi_enum_hello_kotlin_StatusToBuf(v: KoffiResult<Payload, Status>): ByteBuffer {
    val buf = allocateWire(12)
    __koffi_result___koffi_struct_hello_kotlin_Payload___koffi_enum_hello_kotlin_StatusToWire(v, buf)
    return buf
}
private fun __koffi_result_u32_u8ToWire(v: KoffiResult<UInt, UByte>, buf: ByteBuffer) {
    when (v) {
        is KoffiResult.Ok<*> -> {
            buf.put(0, 1.toByte())
            val inner = (v as KoffiResult.Ok<UInt>).value
            
buf.putInt(4, inner.toInt())
        }
        is KoffiResult.Err<*> -> {
            buf.put(0, 0.toByte())
            val inner = (v as KoffiResult.Err<UByte>).error
            
buf.put(4, inner.toByte())
        }
    }
}

private fun __koffi_result_u32_u8FromWire(buf: ByteBuffer): KoffiResult<UInt, UByte> {
    return if (buf.get(0) == 1.toByte()) {
        KoffiResult.Ok(
buf.getInt(4).toUInt())
    } else {
        KoffiResult.Err(
buf.get(4).toUByte())
    }
}

private fun __koffi_result_u32_u8ToBuf(v: KoffiResult<UInt, UByte>): ByteBuffer {
    val buf = allocateWire(8)
    __koffi_result_u32_u8ToWire(v, buf)
    return buf
}

actual object HelloKotlinFfi {
    init {
        System.loadLibrary("hello_kotlin_glue")
    }



    external fun maybePayloadImpl(
        show: Boolean,
        out: ByteBuffer,
    )



    external fun addOptionalImpl(
        a: Int,
        b: ByteBuffer,
    ): Int



    external fun divideImpl(
        n: Int,
        d: Int,
        out: ByteBuffer,
    )



    external fun nothingImpl(
        out: ByteBuffer,
    )



    external fun cStatusImpl(): Int



    external fun drinkImpl(
        x: Int,
        out: ByteBuffer,
    )



    external fun holderStatusImpl(
        h: ByteBuffer,
        out: ByteBuffer,
    )


    actual fun helloKotlinPayloadNew(data: UShort): Payload {
        val out = allocateWire(2)
        helloKotlinPayloadNewImpl(data.toShort(), out)
        return payloadFromWire(out)
    }

    external fun helloKotlinPayloadNewImpl(
        data: Short,
        out: ByteBuffer,
    )



    external fun cStatusIsErrImpl(
        s: Int,
    ): Boolean



    external fun rectAreaImpl(
        r: ByteBuffer,
    ): Int



    external fun moodIsFlyingImpl(
        m: ByteBuffer,
    ): Boolean


    actual fun helloKotlinPayloadDescribeFormat(): UInt =
        helloKotlinPayloadDescribeFormatImpl().toUInt()

    external fun helloKotlinPayloadDescribeFormatImpl(): Int



    external fun rideImpl(
        dance: ByteBuffer,
        out: ByteBuffer,
    )



    external fun resultValueImpl(
        r: ByteBuffer,
    ): Int



    external fun paintImpl(
        color: ByteBuffer,
    ): Boolean


    actual fun helloKotlinStatusDescribe(self: Status): UInt =
        helloKotlinStatusDescribeImpl(statusToBuf(self)).toUInt()

    external fun helloKotlinStatusDescribeImpl(
        self: ByteBuffer,
    ): Int



    external fun rectTopLeftImpl(
        r: ByteBuffer,
        out: ByteBuffer,
    )



    external fun moodImpl(
        out: ByteBuffer,
    )



    external fun howLongImpl(
        seconds: ByteBuffer,
    ): Double



    external fun makeStatusImpl(
        out: ByteBuffer,
    )


    actual fun helloKotlinStatusIdle(): Status {
        val out = allocateWire(8)
        helloKotlinStatusIdleImpl(out)
        return statusFromWire(out)
    }

    external fun helloKotlinStatusIdleImpl(
        out: ByteBuffer,
    )


    actual fun helloKotlinStatusNewBusy(code: UInt): Status {
        val out = allocateWire(8)
        helloKotlinStatusNewBusyImpl(code.toInt(), out)
        return statusFromWire(out)
    }

    external fun helloKotlinStatusNewBusyImpl(
        code: Int,
        out: ByteBuffer,
    )



    external fun makeRectImpl(
        out: ByteBuffer,
    )



    external fun helloImpl(
        out: ByteBuffer,
    )



    external fun nominateImpl(
        x: Int,
        out: ByteBuffer,
    )


    actual fun helloKotlinPayloadWithData(self: Payload, data: UShort): Payload {
        val out = allocateWire(2)
        helloKotlinPayloadWithDataImpl(payloadToBuf(self), data.toShort(), out)
        return payloadFromWire(out)
    }

    external fun helloKotlinPayloadWithDataImpl(
        self: ByteBuffer,
        data: Short,
        out: ByteBuffer,
    )



    external fun favoriteImpl(
        out: ByteBuffer,
    )



    external fun makeHolderImpl(
        out: ByteBuffer,
    )



    external fun statusCodeImpl(
        s: ByteBuffer,
    ): Int


    actual fun helloKotlinPayloadDescribe(self: Payload): UInt =
        helloKotlinPayloadDescribeImpl(payloadToBuf(self)).toUInt()

    external fun helloKotlinPayloadDescribeImpl(
        self: ByteBuffer,
    ): Int

}

actual fun maybePayload(show: Boolean): Payload? {
    val out = allocateWire(4)
    HelloKotlinFfi.maybePayloadImpl(show, out)
    return __koffi_option___koffi_struct_hello_kotlin_PayloadFromWire(out)
}
actual fun addOptional(a: UInt, b: UInt?): UInt =
    HelloKotlinFfi.addOptionalImpl(a.toInt(), __koffi_option_u32ToBuf(b)).toUInt()
actual fun divide(n: UInt, d: UInt): KoffiResult<UInt, UByte> {
    val out = allocateWire(8)
    HelloKotlinFfi.divideImpl(n.toInt(), d.toInt(), out)
    return __koffi_result_u32_u8FromWire(out)
}
actual fun nothing(): UInt? {
    val out = allocateWire(8)
    HelloKotlinFfi.nothingImpl(out)
    return __koffi_option_u32FromWire(out)
}
actual fun cStatus(): CStatus =
    HelloKotlinFfi.cStatusImpl().let { CStatus.fromDiscriminant(it.toUInt()) }
actual fun drink(x: UInt): KoffiResult<UInt?, UByte> {
    val out = allocateWire(12)
    HelloKotlinFfi.drinkImpl(x.toInt(), out)
    return __koffi_result___koffi_option_u32_u8FromWire(out)
}
actual fun holderStatus(h: StatusHolder): Status {
    val out = allocateWire(8)
    HelloKotlinFfi.holderStatusImpl(status_holderToBuf(h), out)
    return statusFromWire(out)
}
actual fun cStatusIsErr(s: CStatus): Boolean =
    HelloKotlinFfi.cStatusIsErrImpl(s.discriminant.toInt())
actual fun rectArea(r: Rect): Int =
    HelloKotlinFfi.rectAreaImpl(rectToBuf(r))
actual fun moodIsFlying(m: Mood): Boolean =
    HelloKotlinFfi.moodIsFlyingImpl(moodToBuf(m))
actual fun ride(dance: Dancer?): Dancer? {
    val out = allocateWire(12)
    HelloKotlinFfi.rideImpl(__koffi_option___koffi_struct_hello_kotlin_DancerToBuf(dance), out)
    return __koffi_option___koffi_struct_hello_kotlin_DancerFromWire(out)
}
actual fun resultValue(r: KoffiResult<UInt, UByte>): UInt =
    HelloKotlinFfi.resultValueImpl(__koffi_result_u32_u8ToBuf(r)).toUInt()
actual fun paint(color: Boolean?): Boolean =
    HelloKotlinFfi.paintImpl(__koffi_option_boolToBuf(color))
actual fun rectTopLeft(r: Rect): Point {
    val out = allocateWire(8)
    HelloKotlinFfi.rectTopLeftImpl(rectToBuf(r), out)
    return pointFromWire(out)
}
actual fun mood(): Mood {
    val out = allocateWire(8)
    HelloKotlinFfi.moodImpl(out)
    return moodFromWire(out)
}
actual fun howLong(seconds: Double?): Double =
    HelloKotlinFfi.howLongImpl(__koffi_option_f64ToBuf(seconds))
actual fun makeStatus(): Status {
    val out = allocateWire(8)
    HelloKotlinFfi.makeStatusImpl(out)
    return statusFromWire(out)
}
actual fun makeRect(): Rect {
    val out = allocateWire(16)
    HelloKotlinFfi.makeRectImpl(out)
    return rectFromWire(out)
}
actual fun hello(): Payload {
    val out = allocateWire(2)
    HelloKotlinFfi.helloImpl(out)
    return payloadFromWire(out)
}
actual fun nominate(x: UInt): KoffiResult<Payload, Status> {
    val out = allocateWire(12)
    HelloKotlinFfi.nominateImpl(x.toInt(), out)
    return __koffi_result___koffi_struct_hello_kotlin_Payload___koffi_enum_hello_kotlin_StatusFromWire(out)
}
actual fun favorite(): UInt? {
    val out = allocateWire(8)
    HelloKotlinFfi.favoriteImpl(out)
    return __koffi_option_u32FromWire(out)
}
actual fun makeHolder(): StatusHolder {
    val out = allocateWire(12)
    HelloKotlinFfi.makeHolderImpl(out)
    return status_holderFromWire(out)
}
actual fun statusCode(s: Status): UInt =
    HelloKotlinFfi.statusCodeImpl(statusToBuf(s)).toUInt()
