tests/snapshots/examples__hello-kotlin_jni_rust_Cargo_toml.snap
---
source: tests/examples.rs
expression: "fs::read_to_string(&file)?"
---
# @generated by koffi

[workspace]

[package]
name = "hello_kotlin_glue"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
hello-kotlin = { path = "../../../../../examples/hello-kotlin" }
jni = { version = "0.22", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
cabi = []
jni = ["dep:jni"]
wasm = ["dep:wasm-bindgen"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "unwind"
debug = false

[profile.dev.package.hello-kotlin]
codegen-units = 256
debug = 2
incremental = true
opt-level = 0
overflow-checks = true
strip = "none"

[profile.release.package.hello-kotlin]
codegen-units = 16
debug = 0
incremental = false
opt-level = 3
overflow-checks = false
strip = "none"
